Ensure that `<pre><code>x</code></pre>` has readable colors

--- a/public/index.css
+++ b/public/index.css
@@ -76,7 +76,8 @@ h5 {
   font-size: clamp(1.2rem, 1.15rem + 0.125vw, 1.25rem);
 }
 
-p, .content ul {
+p,
+.content ul {
   color: var(--theme-text-light);
 }
 
@@ -138,7 +139,7 @@ code:not([class*='language']) {
 
   font-family: var(--font-mono);
   font-size: 0.85em;
-  color: var(--theme-code-text);
+  color: var(--theme-code-inline-text);
   background-color: var(--theme-code-inline-bg);
   padding: var(--padding-block) var(--padding-inline);
   margin: calc(var(--padding-block) * -1) -0.125em;
@@ -272,7 +273,6 @@ input[name='theme-toggle'] {
   z-index: -1;
 }
 
-
 .sidebar-nav {
   width: 100%;
   position: sticky;
@@ -286,9 +286,8 @@ input[name='theme-toggle'] {
   overflow: auto;
 }
 
-
 h2.heading {
-  font-size: 1.0rem;
+  font-size: 1rem;
   font-weight: 700;
   padding: 0.1rem 1rem;
   text-transform: uppercase;
