--- a/public/theme.css
+++ b/public/theme.css
@@ -50,8 +50,9 @@
   --theme-bg-offset: var(--color-gray-100);
   --theme-bg-accent: rgba(var(--theme-accent-rgb), var(--theme-accent-opacity));
   --theme-code-inline-bg: var(--color-gray-100);
-  --theme-code-text: var(--theme-text);
+  --theme-code-inline-text: var(--theme-text);
   --theme-code-bg: var(--color-gray-700);
+  --theme-code-text: var(--color-gray-100);
 }
 
 body {
@@ -71,8 +72,9 @@ body {
   --theme-bg-hover: var(--color-gray-600);
   --theme-bg-offset: var(--color-gray-950);
   --theme-code-inline-bg: var(--color-gray-600);
-  --theme-code-text: var(--color-white);
+  --theme-code-inline-text: var(--color-white);
   --theme-code-bg: var(--color-gray-950);
+  --theme-code-text: var(--color-white);
 }
 
 ::selection {
